Bug 36470 - chpass(1) program has erroneous "usage" for -d and -h
Summary: chpass(1) program has erroneous "usage" for -d and -h
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 4.5-STABLE
Hardware: Any Any
: Normal Affects Only Me
Assignee: dwmalone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-03-29 07:30 UTC by Gary W. Swearingen
Modified: 2002-08-11 15:17 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gary W. Swearingen 2002-03-29 07:30:03 UTC
The chpass(1) program has erroneous "usage":
    usage: chpass [-l] [-y] [-d domain [-h host]] ...

================

Fix: 

Change "[-d domain [-h host]]" to "[-d domain] [-h host]".
How-To-Repeat: n/a
================
Comment 1 dwmalone freebsd_committer freebsd_triage 2002-03-30 14:32:17 UTC
Responsible Changed
From-To: freebsd-bugs->dwmalone

Fixed in -current, will MFC shortly.
Comment 2 dwmalone freebsd_committer freebsd_triage 2002-08-11 15:17:09 UTC
State Changed
From-To: open->closed

Fixed in -current and -stable. Thanks.