Fix vendor ID. Make usage message match the man page. (Missing -o, -h doesn't depend on -d).

PR:		36470
Submitted by:	Gary W. Swearingen <swear@blarg.net>
MFC after:	1 week